--- a/project/myapp/src/Assests/css/Home.css
+++ b/project/myapp/src/Assests/css/Home.css
@@ -9,6 +9,10 @@
 .txt{
     margin-top: -10rem;
     font-size: 100px;
+    color: #EF3B36;  /* fallback for old browsers */
+color: -webkit-linear-gradient(to right, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
+color: linear-gradient(to right, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .age{
     
@@ -63,6 +67,9 @@ ul{
     margin-right: 5px;
     border-radius: 1px;
     padding: 5px 80px;
-    background-color: #ff0d00;
+    background: #EF3B36;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     margin-bottom: 2rem;
 }
