--- a/project/myapp/src/Assests/css/Login.css
+++ b/project/myapp/src/Assests/css/Login.css
@@ -90,7 +90,10 @@
   width: 220px;
   height: 59px;
   color: #fff;
-  background: red;
+  background: #EF3B36;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   border-radius: 50px;
   font-size: 19px;
   font-weight: 700;
