--- a/project/myapp/src/Assests/css/Nav.css
+++ b/project/myapp/src/Assests/css/Nav.css
@@ -5,9 +5,11 @@
     margin-right: 5px;
     border-radius: 1px;
     padding: 5px 80px;
-    background: #EF3B36;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #F00000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #DC281E, #F00000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    
 
 }
 
