--- a/project/myapp/src/Assests/css/Nav.css
+++ b/project/myapp/src/Assests/css/Nav.css
@@ -1,3 +1,6 @@
+.stick{
+    position: sticky;
+}
 .nav{
     position: relative;
     margin-top: 1px;
@@ -14,6 +17,7 @@ background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, F
 }
 
 .navbar{
+    /* position: sticky; */
     display: flex;
     align-items: end;
     justify-content: flex-end;
