--- a/Day8/myapp/src/Assets/pop.css
+++ b/Day8/myapp/src/Assets/pop.css
@@ -1,3 +1,10 @@
+.form-wrap
+{
+  display: flex;
+  justify-content: center;
+  align-items:center ;
+}
+
 .bar{
     display: flex;
     justify-content: center;
@@ -30,6 +37,7 @@ body{
 }
 
 .container{
+    margin-top:50px;
     height: 35vh;
     width: 35vw;
     display: flex;
