--- a/project/myapp/src/Assests/css/Nav.css
+++ b/project/myapp/src/Assests/css/Nav.css
@@ -1,23 +1,17 @@
-.stick{
-    position: sticky;
-}
+
 .nav{
-    position: relative;
+    position: sticky;
     margin-top: 1px;
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 1px;
     padding: 5px 80px;
-    background: #F00000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #DC281E, #F00000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    
-
+    background: #F00000; 
+    background: -webkit-linear-gradient(to right, #DC281E, #F00000);  
+    background: linear-gradient(to right, #DC281E, #F00000); 
 }
 
 .navbar{
-    /* position: sticky; */
     display: flex;
     align-items: end;
     justify-content: flex-end;
