--- a/project/myapp/src/Assests/css/Nav.css
+++ b/project/myapp/src/Assests/css/Nav.css
@@ -1,10 +1,19 @@
-
+.logo{
+    margin-top: -1rem;
+    margin-left: -4rem;
+    height: 50px;
+    width:50px;
+    transform: scale(0.5);
+    justify-content: center;
+}
 .nav{
     position: sticky;
     margin-top: 1px;
     margin-left: 5px;
+    display: flex;
     margin-right: 5px;
     border-radius: 1px;
+    justify-content: space-between;
     padding: 5px 80px;
     background: #F00000; 
     background: -webkit-linear-gradient(to right, #DC281E, #F00000);  
@@ -15,6 +24,7 @@
     display: flex;
     align-items: end;
     justify-content: flex-end;
+    position: sticky;
   }
 
 .navbar li{
