--- a/project/myapp/src/Assests/css/Demo.css
+++ b/project/myapp/src/Assests/css/Demo.css
@@ -8,10 +8,12 @@
     align-items: center;
 }
 .cont{
+    /* margin-right: 1rem;
+    margin-left: 1rem; */
     display: flex;
     justify-content: center;
 }
-h1{
+/* h1{
     border: 2px solid red;
-}
+} */
 
